# sd_task_03

./: CMakeLists.txt  Dockerfile  HOWTO.md  README.md  TASK.md  TASK_INFO.md  about_db.md  data.sql  docker-compose.yaml  openapi.yaml  optimization.md  queries.sql  schema.sql
configs/: static_config.yaml
db/: Dockerfile
src/: main.cpp
src/api/: http_handlers.cpp  http_handlers.hpp
src/domain/: entities.cpp  entities.hpp  jwt_tools.cpp  jwt_tools.hpp  mail_repository.cpp  mail_repository.hpp
tests/: test_api.py
